--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectLink">
+									<a href="https://github.com/Abdhul26/" target="_blank" class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
 								</div>
