--- a/index.html
+++ b/index.html
@@ -135,16 +135,27 @@
 
 					<div class="skill">
 						<span class="chart" data-percent="50">
-							<span class="percent">50</span>
+							<span class="percent">70</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
 						<h4>Javascript</h4>
 						<p>Used in most of my web based projects</p>
 					</div>
 
+
+					<div class="skill">
+						<span class="chart" data-percent="40">
+							<span class="percent">80</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>Node.JS</h4>
+						<p>Used in most of Backend development</p>
+					</div>
+
+
 					<div class="skill">
 						<span class="chart" data-percent="65">
-							<span class="percent">65</span>
+							<span class="percent">75</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
 						<h4>CSS</h4>
@@ -153,7 +164,7 @@
 
 					<div class="skill">
 						<span class="chart" data-percent="50">
-							<span class="percent">50</span>
+							<span class="percent">80</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
 						<h4>ReactJS</h4>
@@ -172,14 +183,6 @@
 
 
 
-					<div class="skill">
-						<span class="chart" data-percent="40">
-							<span class="percent">40</span>
-							<canvas height="152" width="152"></canvas>
-						</span>
-						<h4>Node.JS</h4>
-						<p>Used in most of Backend development</p>
-					</div>
 
 
 				</div>
@@ -210,6 +213,8 @@
 							<div class="squareContent">
 								<h2 class="counter">5</h2>
 								<h3>Years Experience</h3>
+								<p>Having 5 years of experience in Electrical Engineering and inspired learning
+									programming now</p>
 							</div>
 						</div>
 					</div>
@@ -224,6 +229,8 @@
 							<div class="squareContent">
 								<h2 class="counter">12</h2>
 								<h3>GitHub Repo</h3>
+								<p>as for the last three month working on GitHub and you can see my by clicking on link
+									below</p>
 							</div>
 						</div>
 					</div>
@@ -238,6 +245,8 @@
 							<div class="squareContent">
 								<h2 class="counter">2</h2>
 								<h3>Project</h3>
+								<p>here my count on number of projects iam working so far and you can check below on my
+									GitHub</p>
 							</div>
 						</div>
 					</div>
@@ -257,8 +266,8 @@
 			<p class="subHeading">Like what you see?</p>
 			<h2>I'd love to hear from you!</h2>
 			<a href="mailTo:Abdulghani254@gmail.com" class="contactButton">GET IN TOUCH!</a>
-
 		</div>
+
 		<div class="d-flex mt-4 justify-content-around">
 			<span><a href=" https://www.twitter.com/Abdulghani26" class="social">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24">
@@ -272,14 +281,13 @@
 							d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
 					</svg>
 				</a></span>
-			<span><a href="https://www.linkedin.com/in/abdul-ghani-31bb1584" class="social">
+			<span><a href="https://www.linkedin.com/Abdhul26" class="social">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24">
 						<path
 							d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
 					</svg>
 				</a></span>
 		</div>
-
 	</div>
 
 
@@ -379,7 +387,7 @@
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="https://github.com/Abdhul26/" target="_blank" class="projectLink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
 								</div>
