--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 							<div class="squareContent">
 								<h2 class="counter">5</h2>
 								<h3>Years Experience</h3>
-								<p>Having 5 years of experience in Electrical Engineering and inspired learning
+								<p>Having <b>5 years of experience in Electrical Engineering</b> and inspired learning
 									programming now</p>
 							</div>
 						</div>
