--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@
 
 
 								<div class="icons">
-									<a href="./img/portfolio/dog.jpeg" title="View image" class="openButton"
-										data-fancybox data-caption="This is a cute dog">
+									<a href="https://todoapp-abdulghani.vercel.app/" title="View image" class="openButton"
+										data-fancybox data-caption="This is a todo list">
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectLink">
+									<a href="https://todoapp-abdulghani.vercel.app/" target="_blank" class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
 								</div>
@@ -355,12 +355,12 @@
 
 
 								<div class="icons">
-									<a href="./img/portfolio/dog.jpeg" title="View image" class="openButton"
-										data-fancybox data-caption="This is a cute dog">
+									<a href="https://tours-abdulghani.vercel.app/" title="View image" class="openButton"
+										data-fancybox data-caption="This is a tour site">
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="https://github.com/Abdhul26/equipment-hiring-" target="_blank"
+									<a href="https://tours-abdulghani.vercel.app/" target="_blank"
 										class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
@@ -382,12 +382,12 @@
 
 
 								<div class="icons">
-									<a href="img/portfolio/dog.jpeg" title="View image" class="openButton" data-fancybox
-										data-caption="This is a cute dog">
+									<a href="https://menu-abdulghani.vercel.app/" title="View image" class="openButton" data-fancybox
+										data-caption="This is a menu app">
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectLink">
+									<a href="https://menu-abdulghani.vercel.app/" target="_blank" class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
 								</div>
@@ -410,12 +410,12 @@
 
 
 								<div class="icons">
-									<a href="./img/portfolio/" title="View image" class="openButton" data-fancybox
-										data-caption="This is a cute dog">
+									<a href="https://review-slider-abdulghani.vercel.app/" title="View image" class="openButton" data-fancybox
+										data-caption="This is a review app">
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="https://abdhul26.github.io/GitHubclone/" target="_blank"
+									<a href="https://review-slider-abdulghani.vercel.app/" target="_blank"
 										class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
